syntax = "proto3";

option java_package = "com.bilgeadam.grpc";
option java_multiple_files = true;

service OperationService{
  rpc SetOgrenci(OgrenciInsertRequest) returns (OgrenciInsertResponse){}
  rpc UpdateOgrenci(OgrenciUpdateRequest) returns (OgrenciUpdateResponse  ){}
  rpc UpdateOgrenciDers(OgrenciDersUpdateAddRequest) returns (OgrenciDersUpdateAddResponse){}
  rpc EmptyOgrenciDers(OgrenciDersUpdateRequest) returns (OgrenciDersUpdateResponse){}
  rpc DeleteOgrenci(OgrenciDeleteRequest) returns (OgrenciDeleteResponse){}
  rpc ListOgrenci(OgrenciListRequest) returns (OgrenciListResponse){}
  rpc OgrenciGetById(OgrenciGetByIdRequest) returns (OgrenciGetByIdResponse) {}

  rpc SetDers(DersInsertRequest) returns (DersInsertResponse){}
  rpc DeleteDers(DersDeleteRequest) returns (DersDeleteResponse){}
  rpc ListDers(DersListRequest) returns (DersListResponse){}

  rpc ListOgrenciDers(OgrenciDersListRequest) returns (OgrenciDersListResponse){}
}

message Ogrenci{
  int64 id = 1;
  string name = 2;
  int64 ogr_number = 3;
  int64 year = 4;
  string ders1 = 5;
  string ders2 = 6;
  string ders3 = 7;
}

message OgrenciGetByIdRequest { int32 id = 1; }
message OgrenciGetByIdResponse { Ogrenci ogrenci = 1; }

message OgrenciListRequest{}
message OgrenciListResponse{ repeated Ogrenci ogrenci = 1; }

message OgrenciDeleteRequest{ int32 id = 1; }
message OgrenciDeleteResponse{ bool isDelete=1; }

message OgrenciDersUpdateRequest{ int32 id = 1;}
message OgrenciDersUpdateResponse{ bool isDelete=1; }

message OgrenciDersUpdateAddRequest{Ogrenci ogrenci=1;
  int32 id = 2;}
message OgrenciDersUpdateAddResponse{ bool isDelete=1; }

message OgrenciInsertRequest{ Ogrenci ogrenci = 1; }
message OgrenciInsertResponse{ bool isSaved=1; }

message OgrenciUpdateRequest{ Ogrenci ogrenci=1;
  int32 id = 2;}
message OgrenciUpdateResponse{ bool isUpdated = 1; }

message Ders{
  int64 id=1;
  string  ders_name=2;
  int64  ogr_id=3;
}

message DersListRequest{}
message DersListResponse{ repeated Ders ders = 1; }

message DersDeleteRequest{ int32 id = 1; }
message DersDeleteResponse{ bool isDelete=1; }

message DersInsertRequest{ Ders ders = 1; }
message DersInsertResponse{ bool isSaved=1; }

message OgrenciDers{
  int64 id = 1;
  string name = 2;
  int64 ogr_number = 3;
  int64 year = 4;
  string  ders_name=5;
  int64 ogr_id = 6;
}

message OgrenciDersListRequest{}
message OgrenciDersListResponse{ repeated OgrenciDers ogrenciDers = 1; }